proto_V2/static/css/main.css
/*---------------------------------------------------------------------*/
/*------------------------- LAYER DEFINITION --------------------------*/
/*---------------------------------------------------------------------*/
@layer reset, layout, variables, base, single, main;



/*---------------------------------------------------------------------*/
/*--------------------------- Layer - Reset ---------------------------*/
/*---------------------------------------------------------------------*/
@layer reset {

    /* Reset from https://piccalil.li/blog/a-more-modern-css-reset/ */
    /* Box sizing rules */
    *,
    *::before,
    *::after {
        box-sizing: border-box;
    }

    /* Prevent font size inflation */
    html {
        -moz-text-size-adjust: none;
        -webkit-text-size-adjust: none;
        text-size-adjust: none;
    }

    /* Remove default margin in favour of better control in authored CSS */
    body,
    h1,
    h2,
    h3,
    h4,
    h5,
    h6,
    p,
    figure,
    blockquote,
    dl,
    dd {
        margin-block: 0;
    }

    /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
    ul[role="list"],
    ol[role="list"] {
        list-style: none;
    }

    /* Set core body defaults */
    body {
        min-height: 100vh;
        text-wrap: pretty;
        margin: 0;
    }

    /* Set shorter line heights on headings and interactive elements */
    h1,
    h2,
    h3,
    h4,
    h5,
    h6,
    button,
    input,
    label {
        line-height: var(--line-height__title);
    }

    /* Balance text wrapping on headings */
    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
        text-wrap: balance;
    }

    /* Apply parent style to child spans */
    :is(h1, h2, h3, h4, h5, h6)>span {
        font-size: inherit;
        line-height: inherit;
    }

    /* A elements that don't have a class get default styles */
    a:not([class]) {
        text-decoration-skip-ink: auto;
        color: currentColor;
    }

    /* Make images easier to work with */
    img,
    picture {
        max-width: 100%;
        display: block;
    }

    /* Inherit fonts for inputs and buttons */
    input,
    button,
    textarea,
    select {
        font-family: inherit;
        font-size: inherit;
    }

    /* Make sure textareas without a rows attribute are not tiny */
    textarea:not([rows]) {
        min-height: 10em;
    }

    /* Anything that has been anchored to should have extra scroll margin */
    :target {
        scroll-margin-block: 5ex;
    }
}



/*---------------------------------------------------------------------*/
/*-------------------------- Layer - Layout ---------------------------*/
/*---------------------------------------------------------------------*/
@layer layout {

    /* Stack */
    .stack {
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
    }

    .stack>* {
        margin-block: 0;
    }

    .stack>*+* {
        margin-block-start: var(--space, 1.5em);
    }

    .stack:only-child {
        block-size: 100%;
    }

    /* Grille principale */
    .main-grid {
        display: grid;
        grid-template-columns: 7fr 5fr;
        grid-template-rows: none;
    }

    /* Flex between */
    .flex-between {
        display: flex;
        justify-content: space-between;
        gap: var(--gap, .5em);
    }

    /* Flex end */
    .flex-end {
        display: flex;
        justify-content: end;
        gap: var(--gap, .5em);
    }

    .flex-start {
        display: flex;
        justify-content: start;
        gap: var(--gap, .5em);
    }

    /* Elements deplacables */
    *:has(>.draggable) {
        position: relative;
    }

    .draggable {
        position: absolute;
        z-index: 0;
        user-select: none;
        cursor: move;

        &>* {
            pointer-events: none;
        }

        &::before {
            content: url(/icons/move.svg);
            display: block;
            position: absolute;
            height: 32px;
            width: 32px;
            padding: 4px;
            background-position: center;
            background-size: contain;
            background-repeat: no-repeat;
        }
    }

    /* Mono */
    .monospace {
        font-family: monospace;
    }

    .z1 {
        position: relative;
        z-index: 1;
    }
}
/* ... */

